--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -147,7 +147,18 @@
                                                     </div>
                                                     <div class="padded cell rw-2 rw-sm-12">
                                                         {% if cdm_level != 2 %}
-                                                            <button {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-coa-restricted="{{ (coa is not empty and (town|whitelisted or town.password)) ? 1 : 0 }}" x-coa-discard="{{ coa|filter( member => not town|openFor(member) )|map( member => member.name )|join(';') }}" x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>{% trans from 'ghost' %}Beitreten{% endtrans %}</button>
+                                                            <button {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-coa-restricted="{{ (coa is not empty and (town|whitelisted or town.password)) ? 1 : 0 }}" x-coa-discard="{{ coa|filter( member => not town|openFor(member) )|map( member => member.name )|join(';') }}" x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>
+                                                                {{ 'Beitreten'|trans({}, 'ghost') }}
+                                                                {% if town.language != 'multi' and town.language != app.user.language %}
+                                                                    <div class="inline float-right">
+                                                                        <img alt="!" src="{{ asset('build/images/icons/warning_anim.gif') }}" />
+                                                                        <div class="tooltip">
+                                                                            {{ 'Die Sprache dieser Stadt stimmt nicht mit deiner Spracheinstellung überein. Wenn du dieser Stadt beitrittst, musst du im Stadtforum die Sprache der Stadt verwenden.'|trans({},'ghost') }}<br/>
+                                                                            <b>{{ 'Die Verwendung einer anderen Sprache im Stadtforum kann zu Sanktionen seitens der Moderation führen!'|trans({},'ghost') }}</b>
+                                                                        </div>
+                                                                    </div>
+                                                                {% endif %}
+                                                            </button>
                                                         {% endif %}
                                                     </div>
                                                     <div x-town-details="{{ town.id }}" class="padded cell rw-12 hidden" style="background-color: #3b3249;">
