--- a/templates/ajax/soul/future.html.twig
+++ b/templates/ajax/soul/future.html.twig
@@ -9,7 +9,7 @@
     {% else %}
     <div class="news">
         <div class="head">
-            <div class="title center"><img alt="" src="{{ asset('build/images/log/build.gif') }}" /><span class="title-content">{{news[0].title}}</span><img src="{{ asset('build/images/log/build.gif') }}" /></div>
+            <div class="title center"><img alt="" src="{{ asset('build/images/log/build.gif') }}" /><span class="title-content">{{selected.title}}</span><img src="{{ asset('build/images/log/build.gif') }}" /></div>
         </div>
         <div class="version">
             {{"Version"|trans({}, 'soul')}} {{selected.version}}
