--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -272,11 +272,12 @@ x-message {
     }
 
     .flavour-quote {
-      color: #513c2d; padding: 0 !important; font-size: 1.1rem; width: 200px; font-weight: bold;
-      background: url('../img/background/flavor_bg.jpg') 0 41px repeat-y; float: right; font-style: italic;
-
-      .quote-head { background: url('../img/background/flavor_header.jpg') left top no-repeat; padding: 12px 8px; min-height: 55px; }
-      .quote-foot { background: url('../img/background/flavor_footer.jpg') left bottom no-repeat; }
+      color: #513c2d; font-size: 1.1rem; width: 200px; font-weight: bold;
+      padding: 12px 8px; min-height: 55px; float: right; font-style: italic;
+      background:
+              url('../img/background/flavor_header.jpg') left top no-repeat,
+              url('../img/background/flavor_footer.jpg') left bottom no-repeat,
+              url('../img/background/flavor_bg.jpg') 0 41px repeat-y;
     }
 
     &>.row.external-app>.cell, &>.row.external-app>.cell-small {
