Finalize the stranger

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -209,7 +209,7 @@ x-message {
       text-align: left; padding: 3px;
     }
 
-    &.popup-ghoul, &.popup-shaman, &.popup-insurrection {
+    &.popup-ghoul, &.popup-shaman, &.popup-insurrection, &.popup-stranger {
 
       background: #79393a;
       &>div#modal-content {
