--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -840,7 +840,7 @@ ul.subscriptions {
 
       margin: 10px;
       &>li {
-        position: relative; list-style: none; display: block; min-height: 30px;
+        position: relative; min-height: 30px; list-style-image: url(../../img/icons/small_dot.gif);
         &+li { margin-top: 20px; }
         div.pm-avatar, div.pm-avatar-crow {
           position: absolute; height: 40px; width: 40px; border-radius: 100%; top: 0; left: -40px;
