--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1037,6 +1037,7 @@ div.game-menu-area {
         }
         &:not(.ap):not(.bp):not(.pm) {
           &:not(.civil) { min-width: 64px; background: url("../img/game-bar/panel_tl.png") 0 0 no-repeat,url("../img/game-bar/panel_tr.png") 100% 0 no-repeat,url("../img/game-bar/panel_bl.png") 0 100% no-repeat,url("../img/game-bar/panel_br.png") 100% 100% no-repeat,url("../img/game-bar/panel_t.png") 0 0 repeat-x,url("../img/game-bar/panel_l.png") 0 0 repeat-y,url("../img/game-bar/panel_r.png") 100% 0 repeat-y,url("../img/game-bar/panel_b.png") 0 100% repeat-x,url("../img/game-bar/background_sq.png"); };
+          &.rucksack { z-index: 2 }
           &>li:not(.text) {
             height: 18px; margin-top: 6px; vertical-align: bottom;
             &.free,&.item {width: 16px;}
