--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1552,8 +1552,9 @@ div.item-addendum {
 }
 
 div.item-tag {
-  font-size: 1.1rem; text-align: center; padding: 2px; background: #022142; border: 1px solid #011d37;
+  font-size: 1.1rem; /*text-align: center;*/ padding: 2px; background: #022142; border: 1px solid #011d37;
   position: relative; color: @myhordes-smalltext; height: 18px; margin-top: 3px;
+  padding-left: 20px;
   &:after {position: absolute; display: block; content: " "; height: 16px; width: 16px; top: 0; left: 1px; }
   &.item-tag-deco:after { background: url("../img/item/cat_deco.gif") center/contain no-repeat }
   &.item-tag-defense:after { background: url("../img/item/cat_def.gif") center/contain no-repeat }
