--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -268,9 +268,7 @@
 ul.subscriptions {
   padding: 0 0 0 12px;
   &>li {
-    &>span {cursor: pointer; font-size: 0.9em; color: @myhordes-smalltext;}
-    &>img { float: right; cursor: pointer }
-
+    span {cursor: pointer; font-size: 0.9em; color: @myhordes-smalltext;}
     &.new { list-style: url("../../img/icons/anim_icon_mail.gif"); font-weight: bold }
     &:not(.new) { list-style: none }
     &+li { margin-top: 4px; }
